<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/example1"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="90sp"
        android:layout_marginEnd="120sp"
        android:text="@string/example1"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/example2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120sp"
        android:layout_marginTop="90sp"
        android:layout_marginEnd="8sp"
        android:text="@string/example2"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />


    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75sp"
        android:layout_marginTop="150sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_field" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="100sp"
        android:text="@string/example1"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="100sp"
        android:text="@string/sum"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/result_info" />


</androidx.constraintlayout.widget.ConstraintLayout>